Add base node system

--- a/src/Editors/xrEProps/CMakeLists.txt
+++ b/src/Editors/xrEProps/CMakeLists.txt
@@ -4,10 +4,14 @@ project(xrEProps)
 file(GLOB_RECURSE EPROPS_SOURCE_ALL_FILES CONFIGURE_DEPENDS
     "*.*"
 )
+file(GLOB_RECURSE EPROPS_SOURCE_NODE_FILES CONFIGURE_DEPENDS
+    "NodeBuilder/*.*"
+)
 
 set(EPROPS_SRC_FILES)
 
 source_group("src" FILES ${EPROPS_SOURCE_ALL_FILES})
+source_group("nodes" FILES ${EPROPS_SOURCE_NODE_FILES})
 
 # Apply list
 list(APPEND EPROPS_SRC_FILES ${EPROPS_SOURCE_ALL_FILES})
