--- a/src/Editors/CMakeLists.txt
+++ b/src/Editors/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory("ParticleEditor")
 add_subdirectory("ActorEditor")
 add_subdirectory("ShaderEditor")
 add_subdirectory("LevelEditor")
+add_subdirectory("PostProcessEditor")
 
 # Groups
 set_target_properties(xrEUI PROPERTIES ${IXRAY_FOLDER_EDITOR_CORE})
@@ -21,6 +22,7 @@ set_target_properties(xrECore PROPERTIES ${IXRAY_FOLDER_EDITOR_CORE})
 set_target_properties(ParticlesEditor PROPERTIES ${IXRAY_FOLDER_EDITORS})
 set_target_properties(ActorEditor PROPERTIES ${IXRAY_FOLDER_EDITORS})
 set_target_properties(ShaderEditor PROPERTIES ${IXRAY_FOLDER_EDITORS})
+set_target_properties(PPEditor PROPERTIES ${IXRAY_FOLDER_EDITORS})
 set_target_properties(LevelEditor PROPERTIES ${IXRAY_FOLDER_EDITORS})
 
 if (NOT IXRAY_UTILS)
