Reanimate `IXRAY_COMPRESSOR_ONLY` and `IXRAY_UTILS` CMake options

--- a/src/3rd party/CMakeLists.txt
+++ b/src/3rd party/CMakeLists.txt
@@ -2,30 +2,44 @@
 set(IXRAY_FOLDER_3RD FOLDER "3rd Party")
 
 # 3rd libraries
-add_subdirectory("luabind")
-add_subdirectory("ode")
-add_subdirectory("crypto")
-add_subdirectory("cximage")
-add_subdirectory("imgui")
-add_subdirectory("dxerr")
-add_subdirectory("lzo")
-add_subdirectory("opcode")
-
-if(IXRAY_UTILS OR IXRAY_EDITORS)
-    add_subdirectory("MagicSoftware/FreeMagic/Source")
-    set_target_properties(MagicFM PROPERTIES ${IXRAY_FOLDER_3RD})
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    add_subdirectory("luabind")
+    add_subdirectory("ode")
+    add_subdirectory("crypto")
+    add_subdirectory("cximage")
+    add_subdirectory("imgui")
+    add_subdirectory("opcode")
 endif()
 
-if (DEVIXRAY_ENABLE_OGL_RENDER)
+if(WIN32)
+    add_subdirectory("dxerr")
+endif()
+
+add_subdirectory("lzo")
+
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    if(IXRAY_UTILS OR IXRAY_EDITORS)
+        add_subdirectory("MagicSoftware/FreeMagic/Source")
+        set_target_properties(MagicFM PROPERTIES ${IXRAY_FOLDER_3RD})
+    endif()
+endif()
+
+if(DEVIXRAY_ENABLE_OGL_RENDER AND NOT IXRAY_COMPRESSOR_ONLY)
     add_subdirectory("glew")
 endif()
 
 # Move 3rd
-set_target_properties(luabind PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(ODE PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(crypto PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(CxImage PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(imgui PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(dxerr PROPERTIES ${IXRAY_FOLDER_3RD})
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    set_target_properties(luabind PROPERTIES ${IXRAY_FOLDER_3RD})
+    set_target_properties(ODE PROPERTIES ${IXRAY_FOLDER_3RD})
+    set_target_properties(crypto PROPERTIES ${IXRAY_FOLDER_3RD})
+    set_target_properties(CxImage PROPERTIES ${IXRAY_FOLDER_3RD})
+    set_target_properties(imgui PROPERTIES ${IXRAY_FOLDER_3RD})
+    set_target_properties(opcode-prosectors PROPERTIES ${IXRAY_FOLDER_3RD})
+endif()
+
+if(WIN32)
+    set_target_properties(dxerr PROPERTIES ${IXRAY_FOLDER_3RD})
+endif()
+
 set_target_properties(lzo_static_lib PROPERTIES ${IXRAY_FOLDER_3RD})
-set_target_properties(opcode-prosectors PROPERTIES ${IXRAY_FOLDER_3RD})
