--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,58 +6,75 @@ set(IXRAY_FOLDER_GAME FOLDER "Engine/Game")
 
 # Engine libraries
 add_subdirectory("xrCore")
-add_subdirectory("xrCDB")
-add_subdirectory("xrSound")
-add_subdirectory("xrNetServer")
-add_subdirectory("xrEngine")
-add_subdirectory("xrPhysics")
-add_subdirectory("xrParticles")
-add_subdirectory("xrScripts")
 
-if (IXRAY_USE_R1 OR IXRAY_MP)
-    add_subdirectory("Layers/xrRenderPC_R1")
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    add_subdirectory("xrCDB")
+    add_subdirectory("xrSound")
+    add_subdirectory("xrNetServer")
+    add_subdirectory("xrEngine")
+    add_subdirectory("xrPhysics")
+    add_subdirectory("xrParticles")
+    add_subdirectory("xrScripts")
 endif()
 
-if (IXRAY_USE_R2)
-    add_subdirectory("Layers/xrRenderPC_R2")
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    if(IXRAY_USE_R1 OR IXRAY_MP)
+        add_subdirectory("Layers/xrRenderPC_R1")
+    endif()
+
+    if(IXRAY_USE_R2)
+        add_subdirectory("Layers/xrRenderPC_R2")
+    endif()
+
+    if(NOT IXRAY_UTILS)
+        add_subdirectory("Layers/xrRenderPC_R4")
+        add_subdirectory("xrGame")
+    endif()
 endif()
 
-add_subdirectory("Layers/xrRenderPC_R4")
-add_subdirectory("xrGame")
-
-if(IXRAY_MP)
+if(IXRAY_MP AND NOT IXRAY_COMPRESSOR_ONLY AND NOT IXRAY_UTILS)
     add_subdirectory("xrServer")
     add_subdirectory("xrGameSpy")
 endif()
 
-add_subdirectory("xrPlay")
+if(NOT IXRAY_COMPRESSOR_ONLY AND NOT IXRAY_UTILS)
+    add_subdirectory("xrPlay")
+endif()
 
 # Move libraries
 set_target_properties(xrCore PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrCDB PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrSound PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrNetServer PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrPhysics PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrParticles PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrAbstractions PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrScripts PROPERTIES ${IXRAY_FOLDER_ENGINE})
-set_target_properties(xrGame PROPERTIES ${IXRAY_FOLDER_GAME})
 
-if(IXRAY_MP)
+if(NOT IXRAY_COMPRESSOR_ONLY)
+    set_target_properties(xrCDB PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrSound PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrNetServer PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrPhysics PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrParticles PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrAbstractions PROPERTIES ${IXRAY_FOLDER_ENGINE})
+    set_target_properties(xrScripts PROPERTIES ${IXRAY_FOLDER_ENGINE})
+
+    if(NOT IXRAY_UTILS)
+        set_target_properties(xrGame PROPERTIES ${IXRAY_FOLDER_GAME})
+    endif()
+endif()
+
+if(IXRAY_MP AND NOT IXRAY_COMPRESSOR_ONLY AND NOT IXRAY_UTILS)
     set_target_properties(xrGameSpy PROPERTIES ${IXRAY_FOLDER_GAME})
 endif()
 
 if(WIN32)
-    if (IXRAY_USE_R1)
+    if (IXRAY_USE_R1 AND NOT IXRAY_COMPRESSOR_ONLY)
         set_target_properties(xrRender_R1 PROPERTIES ${IXRAY_FOLDER_RENDER})
     endif()
 
-    if (IXRAY_USE_R2)
+    if (IXRAY_USE_R2 AND NOT IXRAY_COMPRESSOR_ONLY)
         set_target_properties(xrRender_R2 PROPERTIES ${IXRAY_FOLDER_RENDER})
     endif()
 
-    set_target_properties(xrRender_R4 PROPERTIES ${IXRAY_FOLDER_RENDER})
+    if (NOT IXRAY_COMPRESSOR_ONLY AND NOT IXRAY_UTILS)
+        set_target_properties(xrRender_R4 PROPERTIES ${IXRAY_FOLDER_RENDER})
 
-    # Set default project
-    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT xrEngine)
+        # Set default project
+        set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT xrEngine)
+    endif()
 endif()
