Add `CONFIGURE_DEPENDS` define in renders

--- a/src/Layers/xrRenderPC_R1/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_R1/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE XRR1_SOURCE_COMP_FILES CONFIGURE_DEPENDS
     "../xrRender/*.cpp"
     "../xrRender/*.h"
 )
-file(GLOB_RECURSE XRR1_SOURCE_INCL_FILES
+file(GLOB_RECURSE XRR1_SOURCE_INCL_FILES CONFIGURE_DEPENDS
     "../../Include/*.h"
 )
 file(GLOB_RECURSE XRR1_SOURCE_COMP_BLEND_FILES
