--- a/src/Layers/xrRenderPC_R4/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_R4/CMakeLists.txt
@@ -2,15 +2,15 @@ project(xrRender_R4)
 set(XRR4_SRC_FILES)
 
 # Files import
-file(GLOB_RECURSE XRR4_SOURCE_ALL_FILES
+file(GLOB_RECURSE XRR4_SOURCE_ALL_FILES CONFIGURE_DEPENDS
     "*.cpp"
     "*.h"
 )
-file(GLOB_RECURSE XRR4_SOURCE_COMP_FILES
+file(GLOB_RECURSE XRR4_SOURCE_COMP_FILES CONFIGURE_DEPENDS
     "../xrRender/*.cpp"
     "../xrRender/*.h"
 )
-file(GLOB_RECURSE XRR4_SOURCE_INCL_FILES
+file(GLOB_RECURSE XRR4_SOURCE_INCL_FILES CONFIGURE_DEPENDS
     "../../Include/*.h"
 )
 file(GLOB_RECURSE XRR4_SOURCE_COMP_BLEND_FILES
